Fixed "Programming Projects" page's title being squished
Changed from editing line height to editing top & bottom margins

--- a/global.css
+++ b/global.css
@@ -55,7 +55,8 @@ nav {
 /* Big h2 */
 h2.big {
     font-size: 300%;
-    line-height: 50%;
+    margin-bottom: 0px;
+    margin-top: 10px;
     text-decoration: underline;
 }
 
